--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,6 @@
                 input_html: { autocomplete: "first_name" }%>
     <%= f.input :email,
                 required: true,
-                # autofocus: true,
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
                 required: true,
@@ -20,7 +19,8 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
-    <%= f.input :avatar, as: :file %>
+    <%= f.input :avatar, as: :file,
+                input_html: { accept: "image/png, image/jpeg" }  %>
   </div>
 
   <div class="form-actions">
