--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -14,3 +14,5 @@
 <% else %>
   <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "", alt: "" %>
 <% end %>
+
+<p>Admin: <%= @user_list.admin %></p>
