--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -23,3 +23,46 @@
     data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
   %>
 <% end %>
+
+<p>Add item</p>
+
+<%= simple_form_for [@list, @item] do |f| %>
+
+  <%= f.error_notification %>
+  <%# <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %> %>
+
+  <%= f.input :name %>
+  <%= f.input :amount %>
+  <%= f.input :comment %>
+
+  <%= f.button :submit, class: "btn btn-warning" %>
+
+<% end %>
+
+<p>Items in the list:</p>
+
+<ul>
+  <% @list.items.each do |item| %>
+    <li><%= item.name %></li>
+
+    <%= simple_form_for [item] do |f| %>
+
+      <%= f.error_notification %>
+      <%# <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %> %>
+
+      <%= f.input :name %>
+      <%= f.input :amount %>
+      <%= f.input :comment %>
+
+      <%= f.button :submit, class: "btn btn-warning" %>
+
+    <% end %>
+
+    <% if policy(item).destroy? %>
+      <%= link_to "Delete Item",
+        item_path(item),
+        data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+      %>
+    <% end %>
+  <% end %>
+</ul>
