--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -50,6 +50,7 @@
       <%= f.error_notification %>
       <%# <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %> %>
 
+      <%= f.input :purchased %>
       <%= f.input :name %>
       <%= f.input :amount %>
       <%= f.input :comment %>
