--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,7 +3,7 @@
   <%= f.input :name,
               autofocus: true,
               input_html: { autocomplete: "name" }%>
-  <%= f.input :comments %>
+  <%= f.input :comment %>
   <%= f.input :image,
               input_html: { accept: "image/png, image/jpeg" } %>
   <%= f.submit %>
