--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,10 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+@import "card";
+@import "invitation";
+@import "button";
+@import "item";
+@import "new_item";
+@import "user_card";
+@import "form";
