--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,8 +3,33 @@
 // For example:
 $red: #FD1015;
 $blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
+// $yellow: #FFC65A;
+// $orange: #E67E22;
+// $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+
+// orange:
+// rgb(253, 113, 44)
+$orange: #fd712c;
+
+// yellow:
+// rgb(254, 225, 119)
+$yellow: #fee177;
+
+// light green:
+// rgb(199, 225, 194)
+// #c7e1c2
+
+// green:
+// rgb(102, 172, 143)
+$green: #66ac8f;
+
+// turquoise
+// rgb(59, 125, 135)
+$turquoise: #3b7d87;
+
+// blue:
+// rgb(32, 56, 70)
+// #203846
