--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,20 +1,66 @@
 .avatar {
   width: 40px;
+  height: 40px;
   border-radius: 50%;
+  object-fit: cover;
 }
 .avatar-large {
   width: 56px;
+  height: 56px;
   border-radius: 50%;
+  object-fit: cover;
 }
 .avatar-bordered {
   width: 40px;
+  height: 40px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+  object-fit: cover;
 }
 .avatar-square {
   width: 40px;
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+}
+
+.no-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+
+  i {
+    font-size: 26px;
+    color: black;
+  }
+}
+
+.no-avatar-large {
+  width: 56px;
+  height: 56px;
+}
+
+.no-avatar-bordered {
+  border: 2px solid rgba(0, 0, 0, 1);
+}
+
+.bg-orange {
+  background-color: rgba(253, 113, 44, 1)
+}
+
+.bg-yellow {
+  background-color: rgba(254, 225, 119, 1)
+}
+
+.bg-turquoise {
+  background-color: rgba(59, 125, 135, 1)
+}
+
+.pending-user {
+  filter: grayscale(1) blur(0.5px);
 }
