--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,4 +1,8 @@
 .navbar-lewagon {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 900;
   justify-content: space-between;
   background: white;
 }
@@ -8,5 +12,5 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 175px;
 }
