--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,42 +1,46 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon pt-3 pb-3">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-    <% end %>
+  
+    <% if user_signed_in? %> <%# check if user is signed in or not %>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <%= link_to user_root_path, class: "navbar-brand" do %>
+        <%= image_tag "logo.svg", alt: "In the list logo." %>
+      <% end %>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
-
-            <% if current_user.avatar.attached? %>
-              <%= cl_image_tag current_user.avatar.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <% else %>
-              <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <% end %>
-
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
+      <div class="d-flex">
+        <% if current_user.avatar.attached? %>
+          <%= cl_image_tag current_user.avatar.key, class: "avatar" %>
         <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
+          <div class="no-avatar bg-turquoise">
+            <i class="fa-solid fa-user"></i>
+          </div>
         <% end %>
-      </ul>
-    </div>
+
+        <button class="btn btn-info fw-bold ms-2 align-items-center pt-1 pb-1 ps-3 pe-3" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" type="button">
+          Menu
+        </button>
+        
+        <ul class="dropdown-menu dropdown-menu-end me-1 mt-1" aria-labelledby="navbarDropdown">
+          <li><%= link_to "Lists", user_root_path, class: "dropdown-item" %></li>
+          <li><%= link_to "New list", new_list_path, class: "dropdown-item" %></li>
+          <li><%= link_to "Account", edit_user_registration_path, class: "dropdown-item" %></li>
+          <li><%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %></li>
+        </ul>
+      </div>
+
+    <% else %> <%# user not signed in  %>
+
+      <%= link_to root_path, class: "navbar-brand" do %>
+        <%= image_tag "logo.svg", alt: "In the list logo." %>
+      <% end %>
+
+      <div>
+        <%= link_to "Log In", new_user_session_path, class: "btn btn-info fw-bold" %>
+        <%# <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-success" %>
+      </div>
+
+    <% end %> <%# user signed in or not evaluation%>
+    
+
   </div>
 </div>
