--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,10 @@ body {
 .container-lg {
   margin-top: 110px;
 }
+
+h2 {
+  text-align: center;
+    font-weight: bold;
+    font-size: 32px;
+    margin: 0 0 30px 0;
+}
