Forms for log in and forgot password

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -28,7 +28,7 @@
   }
 }
 
-.list-form, .account-form {
+.list-form, .account-form, .sign-up-form, .log-in-form, .forgot-password-form {
   background-color: #ffffff;
   padding: 50px 60px;
   border: 1px solid $turquoise;
