--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,13 +1,19 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <div class="text-center mb-5">
+    <p>Already have an account? <%= link_to "Log in", new_session_path(resource_name), class: "btn btn-outline-dark" %></p>
+  </div>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <div class="text-center mb-3">
+    <p>Don't have an account yet? <%= link_to "Sign up", new_registration_path(resource_name), class: "btn btn-outline-dark" %></p>
+  </div>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <div class="text-center mb-5">
+    <p>Forgot your password? <%= link_to "Click here", new_password_path(resource_name), class: "btn btn-outline-dark" %></p>
+  </div>
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
