--- a/app/views/lists/_invitation.html.erb
+++ b/app/views/lists/_invitation.html.erb
@@ -1,4 +1,4 @@
-<div class="invitation">
+<div class="invitation col-12 col-md-5">
 
   <div class="invitation-from">
     <% if invitation.invitation_from.avatar.attached? %>
