--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <div class="row justify-content-center">
-  <div class="col-5">
+  <div class="col-12 col-md-8 col-lg-5">
 
     <h2>Create List</h2>
 
