--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,11 @@ body {
 
 h2 {
   text-align: center;
-    font-weight: bold;
-    font-size: 32px;
+  font-weight: bold;
+  font-size: 32px;
+  margin: 30px 0 30px 0;
+
+  @media (min-width:768px){
     margin: 0 0 30px 0;
+  }
 }
