--- a/app/assets/stylesheets/components/_item.scss
+++ b/app/assets/stylesheets/components/_item.scss
@@ -1,8 +1,12 @@
 .item {
-  padding: 10px 0px;
+  padding: 7px 5px;
   position: relative;
   display: flex;
   flex-wrap: wrap;
+
+  @media (min-width:962px){
+    padding: 10px 5px;
+  }
 }
 .item:nth-child(even) {
   background-color: rgba(59, 125, 135, 0.3);
@@ -10,29 +14,33 @@
 
 .item .purchased {
   width: 10%;
-  border-right: 2px solid $turquoise;
+  // border-right: 2px solid $turquoise;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 5px;
 }
+.item .purchased label {
+  display: flex;
+  align-items: center;
+}
 .item .name {
   width: 40%;
-  border-right: 2px solid $turquoise;
+  // border-right: 2px solid $turquoise;
   display: flex;
   align-items: center;
   padding: 5px;
 }
 .item .amount {
   width: 15%;
-  border-right: 2px solid $turquoise;
+  // border-right: 2px solid $turquoise;
   display: flex;
   align-items: center;
   padding: 5px;
 }
 .item .comment {
   width: 35%;
-  border-right: 2px solid $turquoise;
+  // border-right: 2px solid $turquoise;
   display: flex;
   align-items: center;
   padding: 5px;
@@ -54,13 +62,14 @@
   border: none;
   width: 100%;
   flex-grow: 1;
+  text-overflow: ellipsis;
 }
 .item:nth-child(even) input, .item:nth-child(even) textarea {
   background-color: transparent;
 }
 .item textarea {
-  margin-bottom: 5px;
   resize: none;
+  word-break: break-all;
 }
 .item input:focus-visible, .item textarea:focus-visible {
   outline: none;
@@ -104,9 +113,28 @@
   flex-grow: 1;
   display: flex;
   align-items: center;
+  margin: 0 5px;
+
+  @media (min-width:962px){
+    margin: 0 0;
+  }
 }
 .purchased-info p {
   margin: 0 5px
+}
+.purchased-info .avatar {
+  width: 30px;
+  height: 30px;
+  margin: 0 5px;
+}
+.purchased-info .no-avatar {
+  width: 30px;
+  height: 30px;
+  margin: 0 5px;
+
+  i {
+    font-size: 18px;
+  }
 }
 .input-feedback {
   width: 100%;
