--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,12 +1,11 @@
 .dashboard {
   display: flex;
   flex-wrap: wrap;
-  justify-content:flex-start;
+  justify-content: center;
   margin: 36px auto;
   width: 95%;
 
   .new-list {
-    width: 49%;
     min-height: 230px;
     border-radius: 5px;
     background-color: $yellow;
