--- a/app/assets/stylesheets/pages/_list-show.scss
+++ b/app/assets/stylesheets/pages/_list-show.scss
@@ -1,7 +1,7 @@
 .list-container .bg-image {
   width: 850px;
   height: 700px;
-  background-color: rgba(253, 113, 44, 0.4);
+  // background-color: rgba(253, 113, 44, 0.4);
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 50%;
@@ -19,6 +19,7 @@
   text-align: center;
   font-weight: bold;
   font-size: 32px;
+  line-height: 1.2;
   margin: 0 0 0 0px;
 }
 
@@ -31,10 +32,14 @@
 .list-details .actions {
   font-size: 18px;
   position: absolute;
-  top: -20px;
-  margin-left: 10px;
+  top: -30px;
+  right: 15px;
   display: inline-flex;
   text-decoration: none;
+
+  @media (min-width:768px){
+    right: 0px;
+  }
 }
 .list-details .actions span {
   width: 40px;
@@ -54,7 +59,6 @@
   background-color: white;
   border: 1px solid $turquoise;
   padding: 0;
-  margin-bottom: 50px;
   border-radius: 5px;
 }
 
