--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-5">
+  <div class="col-12 col-md-8 col-lg-5">
 
     <h2>Forgot your password?</h2>
 
@@ -15,7 +15,7 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Send me reset password instructions", class: "btn btn-outline-warning mt-3" %>
+        <%= f.button :submit, "Send me reset password link", class: "btn btn-outline-warning mt-3" %>
       </div>
     <% end %>
 
