--- a/app/views/lists/_list_form.html.erb
+++ b/app/views/lists/_list_form.html.erb
@@ -15,7 +15,7 @@
         <p>Current image</p>
         <div>
           <input class="form-check-input" type="checkbox" id="no_image" name="no_image" value="true">
-          <label class="form-check-label" for="no_image"> Set List without an image</label>
+          <label class="form-check-label d-inline" for="no_image"> Set List without an image</label>
         </div>
       </div>
         
