--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -29,7 +29,7 @@
 </div>
 
 <div class="row justify-content-center">
-  <div class="col-5">
+  <div class="col-12 col-md-8 col-lg-5">
 
     <h2>Update <%= @list_name %></h2>
 
