--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -8,14 +8,13 @@
     <% end %>
   </div>
 
-  <div class="col text-end">
+  <div class="col text-end" data-controller="sweet-alert">
     <% if policy(@list).destroy? %>
-      <%= link_to list_path(@list),
-        data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete \"#{@list_name}\"? This action can't be undone"},
-        class: "btn btn-outline-warning" do %>
-          <i class="fa-solid fa-trash-can"></i>
-          Delete List
-      <% end %>
+      <button type="button" class="btn btn-outline-warning" data-action="click->sweet-alert#displayDeleteAlert">
+        <i class="fa-solid fa-trash-can"></i>
+        Delete List
+      </button>
+      <%= link_to "", list_path(@list), data: {turbo_method: :delete, sweet_alert_target: "link"}, class: "hidden" %>
     <% else %>
       <button type="button" class="btn btn-outline-secondary" disabled>
         <i class="fa-solid fa-trash-can"></i>
