--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -57,10 +57,15 @@
     <% end %>
 
 
-    <div class="text-center mb-5">
+    <div class="text-center mb-5" data-controller="sweet-alert">
       <h3>Cancel my account</h3>
 
-      <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_method: :delete }, class: "btn btn-outline-warning" %></p>
+      <p>Unhappy? 
+        <button type="button" class="btn btn-outline-warning" data-action="click->sweet-alert#displayDeleteAlert">
+          Cancel my account
+        </button>
+      </p>
+      <%= link_to "", registration_path(resource_name), data: {turbo_method: :delete, sweet_alert_target: "link"}, class: "hidden" %>
 
     </div>
     
