--- a/app/assets/stylesheets/pages/_list-show.scss
+++ b/app/assets/stylesheets/pages/_list-show.scss
@@ -41,6 +41,12 @@
     right: 0px;
   }
 }
+.list-details .actions:focus-visible {
+  outline: none;
+}
+.list-details .actions:hover span, .list-details .actions:focus-visible span {
+  background-color: $turquoise;
+}
 .list-details .actions span {
   width: 40px;
   height: 40px;
