--- a/app/views/lists/_list_form.html.erb
+++ b/app/views/lists/_list_form.html.erb
@@ -4,7 +4,7 @@
   } do |f| %>
   <%= f.error_notification %>
   <%= f.input :name,
-              autofocus: true,
+              # autofocus: true,
               input_html: { autocomplete: "name" }%>
   <%= f.input :comment %>
 
