--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
           </div>
         <% end %>
 
-        <button class="btn btn-info fw-bold ms-2 align-items-center pt-1 pb-1 ps-3 pe-3" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" type="button">
+        <button class="btn btn-info fw-bold ms-2 align-items-center pt-1 pb-1 ps-3 pe-3 navbar-btn" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" type="button">
           Menu
         </button>
         
