--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -5,6 +5,12 @@
   color: white;
   margin: 0px 5px;
 }
+.btn-confirm:hover, .btn-confirm:focus-visible {
+  background-color: $turquoise;
+  color: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  outline: 2px solid black;
+}
 
 .btn-cancel {
   background-color: $orange;
@@ -12,4 +18,22 @@
   font-weight: bold;
   color: white;
   margin: 0px 5px;
+}
+.btn-cancel:hover, .btn-cancel:focus-visible  {
+  background-color: $orange;
+  color: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  outline: 2px solid black;
+}
+
+.btn-success:hover {
+  outline: 2px solid black;
+}
+
+.btn-info:hover, .btn-info:focus-visible {
+  outline: 2px solid black;
+}
+
+.btn-info:hover, .btn-info:focus-visible {
+  outline: 2px solid black;
 }
