--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -19,6 +19,9 @@
     justify-content: center;
     text-decoration: none;
   }
+  .new-list:hover, .new-list:focus-visible {
+    outline: 2px solid black;
+  }
 
   .new-list i {
     margin-right: 5px;
