--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
   <div class="form-inputs">
     <%= f.input :first_name,
                 required: true,
-                autofocus: true,
+                # autofocus: true,
                 input_html: { autocomplete: "first_name" }%>
     <%= f.input :email,
                 required: true,
