--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -7,7 +7,7 @@
   <div class="form-inputs">
     <%= f.input :email,
                 required: true,
-                autofocus: true,
+                # autofocus: true,
                 input_html: { autocomplete: "email" } %>
   </div>
 
