--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -8,7 +8,7 @@
       <%= f.error_notification %>
 
       <div class="form-inputs">
-        <%= f.input :first_name, required: true, autofocus: true %>
+        <%= f.input :first_name, required: true %>
 
         <%= f.input :email, required: true %>
 
