--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -34,6 +34,6 @@
   outline: 2px solid black;
 }
 
-.btn-info:hover, .btn-info:focus-visible {
+.btn-warning:hover, .btn-warning:focus-visible {
   outline: 2px solid black;
 }
