--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "- create list" %>
+
 <%= link_to lists_path, class: "btn btn-outline-dark" do %>
   <i class="fa-solid fa-chevron-left"></i>
   All Lists
