--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "- #{@list.name}" %>
+
 <% colors = ["rgba(253, 113, 44, 0.4)", "rgba(254, 225, 119, 0.4)"] %>
 <%#           orange,                    yellow %>
 
