Changed login button style on home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,11 +14,11 @@
       <%= image_tag "screen-desktop.png", alt: "screenshot of application, desktop version.", class: "screen-desktop" %>
       <%= image_tag "screen-mobile.png", alt: "screenshot of application, mobile version.", class: "screen-mobile" %>
     </div>
-    
+
     <div class="actions">
       <%= link_to "Create your account", new_user_registration_path, class: "btn btn-cat" %>
       <div class="text-center mb-5">
-        <p>Already have an account? <%= link_to "Log In", new_user_session_path, class: "btn btn-success" %></p>
+        <p>Already have an account? <%= link_to "Log In", new_user_session_path, class: "btn btn-outline-dark" %></p>
       </div>
     </div>
   </div>
