--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -39,7 +39,7 @@
   }
 }
 
-.list-form, .account-form, .sign-up-form, .log-in-form, .forgot-password-form {
+.list-form, .account-form, .sign-up-form, .log-in-form, .forgot-password-form, .change-password-form {
   background-color: #ffffff;
   padding: 40px 30px;
   border: 1px solid $turquoise;
