--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -52,12 +52,15 @@
 
 
 .list-card .card-infos {
-  padding: 16px;
+  padding: 16px 0px;
+  margin: 0;
 }
 
 .list-card .users .btn, .list-card .add-item .btn {
   display: inline-flex;
   align-items: center;
+  padding-left: 0;
+  padding-right: 0;
   i {
     margin-right: 5px;
     font-size: 28px;
